[package]
name = "volo-macros"
version = "0.11.0"
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = """
Volo's proc macros.
"""
documentation = "https://docs.rs/volo-macros"
readme = "README.md"
categories = ["asynchronous"]
keywords = ["volo", "macro"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
