[package]
name = "volo-thrift"
version = "0.9.2"
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
description = "Thrift RPC framework implementation of volo."
documentation = "https://docs.rs/volo-thrift"
readme = "README.md"
categories = ["asynchronous", "network-programming", "web-programming"]
keywords = ["async", "rpc", "thrift"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
volo = { version = "0.9", path = "../volo" }
pilota.workspace = true
motore.workspace = true
metainfo.workspace = true

ahash.workspace = true
anyhow.workspace = true
bytes.workspace = true
chrono.workspace = true
futures.workspace = true
itoa.workspace = true
rustc-hash.workspace = true
lazy_static.workspace = true
linkedbytes.workspace = true
linked-hash-map.workspace = true
num_enum.workspace = true
parking_lot.workspace = true
paste.workspace = true
pin-project.workspace = true
scopeguard.workspace = true
sonic-rs.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = [
    "time",
    "macros",
    "rt",
    "signal",
    "parking_lot",
] }
tracing.workspace = true
tokio-condvar = "0.1.0"

[features]
default = []
# multiplex is unstable and we don't provide backward compatibility
multiplex = []
# unsafe-codec can achieve better performance for thrift binary protocol, but may cause undefined behavior
# if the thrift message is malformed.
unsafe-codec = []
