[package]
name = "volo"
version = "0.9.0"
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
description = """
Volo is a high-performance and strong-extensibility Rust RPC framework that helps developers build microservices.
"""
documentation = "https://docs.rs/volo"
readme = "README.md"
categories = ["asynchronous", "network-programming", "web-programming"]
keywords = ["async", "rpc", "thrift", "grpc", "protobuf"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"] # for conditional intra-doc links

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
motore.workspace = true

async-broadcast.workspace = true
dashmap.workspace = true
faststr.workspace = true
futures.workspace = true
lazy_static.workspace = true
libc.workspace = true
metainfo.workspace = true
mur3.workspace = true
nix = { workspace = true, features = [
    "uio",
    "socket",
    "process",
    "signal",
    "feature",
] }
once_cell.workspace = true
pin-project.workspace = true
rand.workspace = true
socket2 = { workspace = true, features = ["all"] }
thiserror.workspace = true
tokio = { workspace = true, features = ["net", "time", "sync", "io-util"] }
tokio-stream = { workspace = true, features = ["net"] }
tower.workspace = true
tracing.workspace = true

# Optional dependencies
rustls = { workspace = true, optional = true }
rustls-pemfile = { workspace = true, optional = true }
rustls-pki-types = { workspace = true, optional = true }
webpki-roots = { workspace = true, optional = true }
tokio-rustls = { workspace = true, optional = true }
native-tls = { workspace = true, optional = true }
tokio-native-tls = { workspace = true, optional = true }

[features]
default = []

__tls = []
rustls = [
    "__tls",
    "dep:rustls",
    "dep:rustls-pemfile",
    "dep:rustls-pki-types",
    "dep:webpki-roots",
    "dep:tokio-rustls",
]
native-tls = ["__tls", "dep:native-tls", "dep:tokio-native-tls"]
native-tls-vendored = ["native-tls", "tokio-native-tls/vendored"]
