[package]
name = "volo-gen"
version = "0.0.0"
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
tokio = { workspace = true, features = ["full"] }

pilota.workspace = true
volo = { path = "../../volo" }
volo-grpc = { path = "../../volo-grpc" }
volo-thrift = { path = "../../volo-thrift" }

[build-dependencies]
volo-build = { path = "../../volo-build" }
