[package]
name = "code-generation-workspace-split"
edition = "2021"
version = "0.0.0"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
bench = false
name = "gen"
test = false

[workspace]
members = []

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
lazy_static = "1"

pilota = "*"
volo = "*"
volo-build = "*"
volo-thrift = "*"

[dependencies.volo-build]
workspace = true
