[dependencies.anyhow]
workspace = true

[dependencies.async-trait]
workspace = true

[dependencies.common]
path = "../common"

[dependencies.lazy_static]
workspace = true

[dependencies.pilota]
workspace = true

[dependencies.serde]
workspace = true

[dependencies.volo]
workspace = true

[dependencies.volo-build]
workspace = true

[dependencies.volo-thrift]
workspace = true

[package]
edition = "2021"
name = "rpc_article"
version = "0.1.0"
